// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerStatsTable > renders empty state 1`] = `
"<div class="px-4 sm:px-0">
  <div class="w-full sm:w-4/5 sm:mx-auto mb-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-3">
    <div class="flex items-center gap-2"><label for="team-filter" class="text-white font-semibold whitespace-nowrap">Filter by Team:</label><select id="team-filter" class="bg-zinc-700 text-white px-3 py-2 rounded-lg border border-zinc-600 focus:outline-none focus:border-blue-500 text-sm" value="">
        <option value="">All Teams</option>
      </select></div>
    <div class="flex items-center gap-2 w-full sm:w-auto"><label for="player-search" class="sr-only">Search players</label><input id="player-search" type="text" placeholder="Search players..." class="bg-zinc-700 text-white px-3 py-2 rounded-lg border border-zinc-600 focus:outline-none focus:border-blue-500 w-full sm:w-64 placeholder-zinc-400 text-sm"></div>
  </div>
  <div class="w-full sm:w-4/5 sm:mx-auto overflow-x-auto -mx-4 sm:mx-0 px-4 sm:px-0">
    <table class="w-full text-white min-w-[600px]">
      <thead>
        <tr class="text-sm">
          <th class="px-1 py-2">#</th>
          <th class="px-1 py-2">Team</th>
          <th class="px-1 py-2 text-left">Player</th>
          <th class="px-1 py-2">Pos</th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> GP </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> G </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> A </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> PTS ↓</th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> +/- </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> PIM </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> S </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> S% </th>
        </tr>
      </thead>
      <tbody></tbody>
    </table>
  </div>
</div>"
`;

exports[`PlayerStatsTable > renders filtered by team 1`] = `
"<div class="px-4 sm:px-0">
  <div class="w-full sm:w-4/5 sm:mx-auto mb-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-3">
    <div class="flex items-center gap-2"><label for="team-filter" class="text-white font-semibold whitespace-nowrap">Filter by Team:</label><select id="team-filter" class="bg-zinc-700 text-white px-3 py-2 rounded-lg border border-zinc-600 focus:outline-none focus:border-blue-500 text-sm" value="TOR">
        <option value="">All Teams</option>
      </select></div>
    <div class="flex items-center gap-2 w-full sm:w-auto"><label for="player-search" class="sr-only">Search players</label><input id="player-search" type="text" placeholder="Search players..." class="bg-zinc-700 text-white px-3 py-2 rounded-lg border border-zinc-600 focus:outline-none focus:border-blue-500 w-full sm:w-64 placeholder-zinc-400 text-sm"></div>
  </div>
  <div class="w-full sm:w-4/5 sm:mx-auto overflow-x-auto -mx-4 sm:mx-0 px-4 sm:px-0">
    <table class="w-full text-white min-w-[600px]">
      <thead>
        <tr class="text-sm">
          <th class="px-1 py-2">#</th>
          <th class="px-1 py-2">Team</th>
          <th class="px-1 py-2 text-left">Player</th>
          <th class="px-1 py-2">Pos</th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> GP </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> G </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> A </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> PTS ↓</th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> +/- </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> PIM </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> S </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> S% </th>
        </tr>
      </thead>
      <tbody>
        <tr class="even:bg-zinc-600 text-center text-sm">
          <td class="px-1 py-2 font-bold">1</td>
          <td class="px-1 py-2"><a href="/player-stats/TOR"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 mx-auto cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Click to filter by Toronto Maple Leafs"></a></td>
          <td class="px-1 py-2 text-left">Auston Matthews</td>
          <td class="px-1 py-2">C</td>
          <td class="px-1 py-2">70</td>
          <td class="px-1 py-2">45</td>
          <td class="px-1 py-2">35</td>
          <td class="px-1 py-2 font-semibold">80</td>
          <td class="px-1 py-2">+15</td>
          <td class="px-1 py-2">20</td>
          <td class="px-1 py-2">250</td>
          <td class="px-1 py-2">1800.0%</td>
        </tr>
        <tr class="even:bg-zinc-600 text-center text-sm">
          <td class="px-1 py-2 font-bold">2</td>
          <td class="px-1 py-2"><a href="/player-stats/TOR"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 mx-auto cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Click to filter by Toronto Maple Leafs"></a></td>
          <td class="px-1 py-2 text-left">Mitch Marner</td>
          <td class="px-1 py-2">C</td>
          <td class="px-1 py-2">70</td>
          <td class="px-1 py-2">45</td>
          <td class="px-1 py-2">35</td>
          <td class="px-1 py-2 font-semibold">80</td>
          <td class="px-1 py-2">+15</td>
          <td class="px-1 py-2">20</td>
          <td class="px-1 py-2">250</td>
          <td class="px-1 py-2">1800.0%</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`PlayerStatsTable > renders player list 1`] = `
"<div class="px-4 sm:px-0">
  <div class="w-full sm:w-4/5 sm:mx-auto mb-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-3">
    <div class="flex items-center gap-2"><label for="team-filter" class="text-white font-semibold whitespace-nowrap">Filter by Team:</label><select id="team-filter" class="bg-zinc-700 text-white px-3 py-2 rounded-lg border border-zinc-600 focus:outline-none focus:border-blue-500 text-sm" value="">
        <option value="">All Teams</option>
      </select></div>
    <div class="flex items-center gap-2 w-full sm:w-auto"><label for="player-search" class="sr-only">Search players</label><input id="player-search" type="text" placeholder="Search players..." class="bg-zinc-700 text-white px-3 py-2 rounded-lg border border-zinc-600 focus:outline-none focus:border-blue-500 w-full sm:w-64 placeholder-zinc-400 text-sm"></div>
  </div>
  <div class="w-full sm:w-4/5 sm:mx-auto overflow-x-auto -mx-4 sm:mx-0 px-4 sm:px-0">
    <table class="w-full text-white min-w-[600px]">
      <thead>
        <tr class="text-sm">
          <th class="px-1 py-2">#</th>
          <th class="px-1 py-2">Team</th>
          <th class="px-1 py-2 text-left">Player</th>
          <th class="px-1 py-2">Pos</th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> GP </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> G </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> A </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> PTS ↓</th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> +/- </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> PIM </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> S </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> S% </th>
        </tr>
      </thead>
      <tbody>
        <tr class="even:bg-zinc-600 text-center text-sm">
          <td class="px-1 py-2 font-bold">1</td>
          <td class="px-1 py-2"><a href="/player-stats/TOR"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 mx-auto cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Click to filter by Toronto Maple Leafs"></a></td>
          <td class="px-1 py-2 text-left">Connor McDavid</td>
          <td class="px-1 py-2">C</td>
          <td class="px-1 py-2">70</td>
          <td class="px-1 py-2">45</td>
          <td class="px-1 py-2">35</td>
          <td class="px-1 py-2 font-semibold">124</td>
          <td class="px-1 py-2">+15</td>
          <td class="px-1 py-2">20</td>
          <td class="px-1 py-2">250</td>
          <td class="px-1 py-2">1800.0%</td>
        </tr>
        <tr class="even:bg-zinc-600 text-center text-sm">
          <td class="px-1 py-2 font-bold">2</td>
          <td class="px-1 py-2"><a href="/player-stats/TOR"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 mx-auto cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Click to filter by Toronto Maple Leafs"></a></td>
          <td class="px-1 py-2 text-left">Auston Matthews</td>
          <td class="px-1 py-2">C</td>
          <td class="px-1 py-2">70</td>
          <td class="px-1 py-2">45</td>
          <td class="px-1 py-2">35</td>
          <td class="px-1 py-2 font-semibold">80</td>
          <td class="px-1 py-2">+15</td>
          <td class="px-1 py-2">20</td>
          <td class="px-1 py-2">250</td>
          <td class="px-1 py-2">1800.0%</td>
        </tr>
        <tr class="even:bg-zinc-600 text-center text-sm">
          <td class="px-1 py-2 font-bold">3</td>
          <td class="px-1 py-2"><a href="/player-stats/TOR"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 mx-auto cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Click to filter by Toronto Maple Leafs"></a></td>
          <td class="px-1 py-2 text-left">Nathan MacKinnon</td>
          <td class="px-1 py-2">C</td>
          <td class="px-1 py-2">70</td>
          <td class="px-1 py-2">45</td>
          <td class="px-1 py-2">35</td>
          <td class="px-1 py-2 font-semibold">95</td>
          <td class="px-1 py-2">+15</td>
          <td class="px-1 py-2">20</td>
          <td class="px-1 py-2">250</td>
          <td class="px-1 py-2">1800.0%</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`PlayerStatsTable > renders with search query 1`] = `
"<div class="px-4 sm:px-0">
  <div class="w-full sm:w-4/5 sm:mx-auto mb-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-3">
    <div class="flex items-center gap-2"><label for="team-filter" class="text-white font-semibold whitespace-nowrap">Filter by Team:</label><select id="team-filter" class="bg-zinc-700 text-white px-3 py-2 rounded-lg border border-zinc-600 focus:outline-none focus:border-blue-500 text-sm" value="">
        <option value="">All Teams</option>
      </select></div>
    <div class="flex items-center gap-2 w-full sm:w-auto"><label for="player-search" class="sr-only">Search players</label><input id="player-search" type="text" placeholder="Search players..." class="bg-zinc-700 text-white px-3 py-2 rounded-lg border border-zinc-600 focus:outline-none focus:border-blue-500 w-full sm:w-64 placeholder-zinc-400 text-sm"></div>
  </div>
  <div class="w-full sm:w-4/5 sm:mx-auto overflow-x-auto -mx-4 sm:mx-0 px-4 sm:px-0">
    <table class="w-full text-white min-w-[600px]">
      <thead>
        <tr class="text-sm">
          <th class="px-1 py-2">#</th>
          <th class="px-1 py-2">Team</th>
          <th class="px-1 py-2 text-left">Player</th>
          <th class="px-1 py-2">Pos</th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> GP </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> G </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> A </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> PTS ↓</th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> +/- </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> PIM </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> S </th>
          <th class="cursor-pointer hover:text-blue-400 select-none px-1 py-2"> S% </th>
        </tr>
      </thead>
      <tbody>
        <tr class="even:bg-zinc-600 text-center text-sm">
          <td class="px-1 py-2 font-bold">1</td>
          <td class="px-1 py-2"><a href="/player-stats/TOR"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 mx-auto cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Click to filter by Toronto Maple Leafs"></a></td>
          <td class="px-1 py-2 text-left">Connor McDavid</td>
          <td class="px-1 py-2">C</td>
          <td class="px-1 py-2">70</td>
          <td class="px-1 py-2">45</td>
          <td class="px-1 py-2">35</td>
          <td class="px-1 py-2 font-semibold">124</td>
          <td class="px-1 py-2">+15</td>
          <td class="px-1 py-2">20</td>
          <td class="px-1 py-2">250</td>
          <td class="px-1 py-2">1800.0%</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;
